--- a/osr-mapping.tex
+++ b/osr-mapping.tex
@@ -15,7 +15,7 @@ $\mu_{\pi\pi'}:[1,|\pi|]\rightarrow [1,|\pi'|]\times Prog$ such that:
 We say that the mapping is {\em strict} if $\sigma'=\sigma$. We denote by $OSRMap$ the set of all possible OSR mappings between any pair of programs.
 \end{definition}
 
-\noindent Intuitively, an OSR mapping provides the information required to transfer execution from any realizable state of $\pi$, i.e., an execution state that is reachable from some initial store by $\pi$, to a realizable state of $\pi'$. Notice that this definition is rather general, as a non-strict mapping allows execution to be transferred to a program $\pi'$ that is {\em not} semantically equivalent to $\pi$. For instance, $\pi'$ may contain speculatively optimized code, or just some optimized fragments of $\pi$~\cite{Guo11, Bala00, Gal09}. In those scenarios, one typically assumes that execution in $\pi'$ can be invalidated by performing an OSR transition back to $\pi$ or to some other recovery program. We also observe that \mydefinition\ref{de:osr-mapping} uses a weak notion of store equality restricted to live variables. To simplify the discussion, we assume that the memory store is only defined on scalar variables (we address extensions to memory \mytt{load} and \mytt{store} instructions in Section\missing). Hence, the behavior of a program only depends on the content of its live variables, as stated in the following lemma:
+\noindent Intuitively, an OSR mapping provides the information required to transfer execution from any realizable state of $\pi$, i.e., an execution state that is reachable from some initial store by $\pi$, to a realizable state of $\pi'$. Notice that this definition is rather general, as a non-strict mapping allows execution to be transferred to a program $\pi'$ that is {\em not} semantically equivalent to $\pi$. For instance, $\pi'$ may contain speculatively optimized code, or just some optimized fragments of $\pi$~\cite{Guo11, Bala00, Gal09}. In those scenarios, one typically assumes that execution in $\pi'$ can be invalidated by performing an OSR transition back to $\pi$ or to some other recovery program. We also observe that \mydefinition\ref{de:osr-mapping} uses a weak notion of store equality restricted to live variables. To simplify the discussion, we assume that the memory store is only defined on scalar variables (we address extensions to memory \mytt{load} and \mytt{store} instructions in \mysection\ref{{ss:BC-implementation}}). Hence, the behavior of a program only depends on the content of its live variables, as stated in the following lemma:
 
 \begin{lemma}
 \label{le:only-live-count}
@@ -35,7 +35,7 @@ We reason on the structure of the transition relation $\Rightarrow_{\pi}$ for ou
 \noindent When \ref{eq:asgn-sem} applies, both states advance to location $l+1$, and the evaluation $(\sigma, \texttt{e}) \Downarrow v$ for the assignment yields the same result in both stores, as each operand in $e$ is either a constant literal or a live variable for $\pi$ at $l$. Indeed, having a variable operand for $e$ not in $\live(\pi,l)$ would contradict the definition of liveness. When the instruction at $l$ is a conditional expression, $\Rightarrow_{\pi}$ applies either \ref{eq:ifz-sem} or \ref{eq:ifnz-sem} to both states: as discussed for assignments, the evaluation of expression $e$ yields the same result in $\sigma$ and $\sigma\vert_{\live(\pi,l)}$, and both states advance to the same location without affecting the store. When one of \Crefrange{eq:goto-sem}{eq:out-sem} applies, trivially both states advance to the same location, while values in their stores are not affected. Finally, from \ref{de:live-var} it follows that $\live(\pi,l')\supseteq\live(\pi,l)\cup\{\,\texttt{x} ~ | ~ I_l=\texttt{x:=e}\,\}$ and thus $\hat{\sigma}\vert_{\live(\pi,l')} = \sigma'\vert_{\live(\pi,l')}$.
 \end{myproof}
 
-\noindent Notice that $dom(\mu_{\pi\pi'})\subseteq [1,|\pi|]$ is the set of all possible points in $\pi$ where OSR transitions to $\pi'$ can be fired. If $\mu_{\pi\pi'}$ is partial, then there are points in $\pi$ where OSR cannot be fired. In Section\missing, we discuss an algorithm whose goal is to minimize the number of these points.
+\noindent Notice that $dom(\mu_{\pi\pi'})\subseteq [1,|\pi|]$ is the set of all possible points in $\pi$ where OSR transitions to $\pi'$ can be fired. If $\mu_{\pi\pi'}$ is partial, then there are points in $\pi$ where OSR cannot be fired. In the next section, we discuss an algorithm whose goal is to minimize the number of these points.
 
 
 \subsubsection{OSR Mapping Generation Algorithm}
@@ -46,7 +46,7 @@ We now discuss an algorithm that, given a program $\pi$ and a rewrite rule $T$, 
  \item an OSR mapping $\mu_{\pi'\pi}$ from $\pi'$ to $\pi$.
 \end{enumerate}
 
-\noindent Mappings $\mu_{\pi\pi'}$ and $\mu_{\pi'\pi}$ produced by the algorithm are based on compensation code that runs in $O(1)$ time and support bidirectional OSR between $\pi$ and $\pi'$, enabling invalidation and deoptimization. The algorithm, which we call \osrtrans, is shown \ifauthorea{below}{in \myalgorithm\ref{alg:osr-trans}}. In Section\missing, we prove that the algorithm is correct under the sufficient condition that variables that are live at corresponding points in the original and rewritten program contain the same values.
+\noindent Mappings $\mu_{\pi\pi'}$ and $\mu_{\pi'\pi}$ produced by the algorithm are based on compensation code that runs in $O(1)$ time and support bidirectional OSR between $\pi$ and $\pi'$, enabling invalidation and deoptimization. The algorithm, which we call \osrtrans, is shown \ifauthorea{below}{in \myalgorithm\ref{alg:osr-trans}}. In \mysection\ref{ss:osr-mapping-correctness}, we prove that the algorithm is correct under the sufficient condition that variables that are live at corresponding points in the original and rewritten program contain the same values.
 
 %% OSR_trans
 \ifdefined\noauthorea
@@ -166,13 +166,13 @@ $\chi\gets \chi\cdot\textbf{out}~x_1~x_2~\cdots~x_{k'}:\forall i\in[1,k']:\pi',l
 
 
 \paragraph*{\texttt{OSR\_trans}.} The algorithm relies on two subroutines: \apply\ and \buildcomp. Procedure \apply\ takes as input a program $\pi$ and a program rewriting function $T$, and returns a transformed program $\pi'$ and two functions $\Delta:[1,|\pi|]\rightarrow [1,|\pi'|]$, $\Delta':[1,|\pi'|]\rightarrow [1,|\pi|]$ that map OSR program points between $\pi$ and $\pi'$. 
-Algorithm \buildcomp\ (shown \ifauthorea{above}{in \myalgorithm\ref{alg:osr-build-comp}}) takes as input $\pi$, $l$, $\pi'$, $l'$ and aims to build a {\em store compensation code} $\chi$ that allows firing an OSR from $\pi$ at $l$ to $\pi'$ at $l'$. \osrtrans\ first calls \apply\ and then uses \buildcomp\ on $\pi$, $\pi'$, $\Delta$, $\Delta'$ to build OSR mappings $\mu_{\pi\pi'},\mu_{\pi'\pi}$. Lines 2--5 build the forward mapping $\mu_{\pi\pi'}$ from $l$ in $\pi$ to $\Delta(l)$ in $\pi'$, while lines 6--9 build the backward mapping $\mu_{\pi'\pi}$ from $l'$ in $\pi'$ to $\Delta'(l')$ in $\pi$. If any of the live variables at the OSR destination cannot be guaranteed to be correctly assigned, no entry is created in $\mu_{\pi\pi'}$ or $\mu_{\pi'\pi}$ for the OSR origin point (lines 4 and 8). Hence, those points will not be eligible for OSR transitions. In Section \missing\ we will analyze experimentally the fraction of points for which a compensation code can be created by algorithm \buildcomp\ in a variety of prominent benchmarks.
+Algorithm \buildcomp\ (shown \ifauthorea{above}{in \myalgorithm\ref{alg:osr-build-comp}}) takes as input $\pi$, $l$, $\pi'$, $l'$ and aims to build a {\em store compensation code} $\chi$ that allows firing an OSR from $\pi$ at $l$ to $\pi'$ at $l'$. \osrtrans\ first calls \apply\ and then uses \buildcomp\ on $\pi$, $\pi'$, $\Delta$, $\Delta'$ to build OSR mappings $\mu_{\pi\pi'},\mu_{\pi'\pi}$. Lines 2--5 build the forward mapping $\mu_{\pi\pi'}$ from $l$ in $\pi$ to $\Delta(l)$ in $\pi'$, while lines 6--9 build the backward mapping $\mu_{\pi'\pi}$ from $l'$ in $\pi'$ to $\Delta'(l')$ in $\pi$. If any of the live variables at the OSR destination cannot be guaranteed to be correctly assigned, no entry is created in $\mu_{\pi\pi'}$ or $\mu_{\pi'\pi}$ for the OSR origin point (lines 4 and 8). Hence, those points will not be eligible for OSR transitions. In \mysection\ref{se:eval-OSR-alC} we analyze experimentally the fraction of points for which a compensation code can be created by algorithm \buildcomp\ in a variety of prominent benchmarks.
 
 \paragraph*{\texttt{build\_comp}.} \ifauthorea{The algorithm (shown above)}{Code shown in \myalgorithm\ref{alg:osr-build-comp}} generates a program $\chi$ that starts with an {\tt in} statement with the live variables at origin $l$ in $\pi$ (line 1), and ends with an {\tt out} statement with the live variables at destination $l'$ in $\pi'$ (line 9). The goal of $\chi$ is to make sure that all {\tt out} variables are correctly assigned, either because they already hold the correct value upon entry, or because they can be computed in terms of the input variables. The algorithm iterates on all variables $x_i$ that are live at destination, but not at origin (line 4). For each of them, it calls a subroutine \reconstruct\ that builds a code fragment that assigns $x_i$ with its correct value using live variables at origin (line 5). If this value cannot be determined, \reconstruct\ throws an exception and \buildcomp\ returns an undefined compensation code (line 8), which implies that OSR cannot be performed at $l$. To avoid code duplication in $\chi$ and unnecessary work, the algorithm assumes all points in $\pi'$ are initially unvisited (line 2) and lets \reconstruct\ mark them visited along the way. Algorithm \buildcomp\ can be implemented with a running time linearly bounded by the size of $\pi'$.
 
 %% reconstruct
 \ifdefined\noauthorea
-\begin{figure}[ht!]
+\begin{figure}[!b]
 \IncMargin{2em}
 \begin{algorithm}[H]
 \DontPrintSemicolon
@@ -224,4 +224,4 @@ $\mathbf{procedure} \> \> \reconstruct$($\wx$, $\pi$, $l$, $\pi'$, $l'$, $l''$):
 \fi
 
 \paragraph*{\texttt{reconstruct}.} The procedure \ifauthorea{shown above}{(shown in \myalgorithm\ref{alg:osr-reconstruct})} takes a variable \wx, the OSR origin and destination points $l$ and $l'$ in $\pi$ and $\pi'$, respectively, and an additional point $l''$ in $\pi'$. It builds a straight-line code fragment that assigns \wx\ with the value it would have had at $l''$ just before reaching $l'$ if execution had been carried on in $\pi'$ instead of $\pi$. The algorithm first checks if there is a unique definition of \wx\ of the form \mytt{x:=e} at some point $\hat{l}$ that reaches point $l''$ in $\pi''$ (\ureachdef\ at line 1). If such reaching definition is not unique, then the live information available in $\pi$ at $l$ is deemed insufficient to determine what value \wx\ would have assumed in $\pi'$, and the algorithm gives up (line 10). % by throwing an $undef$ exception.
-The algorithm assumes liveness and reaching definition analyses are available to compute predicates \live\ and \ureachdef\ (see Section \missing). If \wx\ is live both at the origin $l$ and at the destination $l'$, and the definition of \wx\ at $\hat{l}$ that reaches $l''$ is also a unique definition reaching $l'$ (line 4), then \wx\ would have assumed at $l''$ the same value available at $l'$. In Section \missing\ we will see that, if we can guarantee that live variables at origin have the same values they would have had at destination if execution had been performed in $\pi'$, then the algorithm correctly assumes that \wx\ is available at origin and no compensation code is needed to reconstruct it (\mytt{return} at line 4). If \wx\ is not available at $l$, then the algorithm iterates over all free variables $y$ of the expression $e$ computed at $\hat{l}$ and recursively builds code that computes the values that they would have assumed at $\hat{l}$ just before reaching $l'$ if execution had been carried on in $\pi'$. After the recursively generated code for assigning the constituents of \we\ has been added to $\chi$ (lines 6--8), the assignment \mytt{x:=e} is appended to $\chi$ (line 9).
+The algorithm assumes liveness and reaching definition analyses are available to compute predicates \live\ and \ureachdef\ (see \mysection\ref{ss:osr-reasoning-and-transformations}). If \wx\ is live both at the origin $l$ and at the destination $l'$, and the definition of \wx\ at $\hat{l}$ that reaches $l''$ is also a unique definition reaching $l'$ (line 4), then \wx\ would have assumed at $l''$ the same value available at $l'$. In the next section we will see that, if we can guarantee that live variables at origin have the same values they would have had at destination if execution had been performed in $\pi'$, then the algorithm correctly assumes that \wx\ is available at origin and no compensation code is needed to reconstruct it (\mytt{return} at line 4). If \wx\ is not available at $l$, then the algorithm iterates over all free variables $y$ of the expression $e$ computed at $\hat{l}$ and recursively builds code that computes the values that they would have assumed at $\hat{l}$ just before reaching $l'$ if execution had been carried on in $\pi'$. After the recursively generated code for assigning the constituents of \we\ has been added to $\chi$ (lines 6--8), the assignment \mytt{x:=e} is appended to $\chi$ (line 9).
